Fix bugs iform validation and comment form button and column layout of searchform on mobile

--- a/css/experiment.css
+++ b/css/experiment.css
@@ -1,12 +1,1 @@
-body {
-  margin: 0 !important;
-  padding: 0 !important;
-}
 
-html.no-js {
-  margin: 0 !important;
-}
-header {
-  margin-top: 0;
-  padding-top: 0;
-}
